--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\lichu\\miniconda3\\envs\\torch\\python.exe"
+    "python.pythonPath": "/Users/lichunyu/opt/anaconda3/envs/torch-cpu/bin/python"
 }
