--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # pytorch>=1.6.0  # You should install pytorch matched with your own cuda version
-transformers
+transformers==4.25.0
 numpy
 pandas
 scikit-learn
-tokenizers
+tokenizers==0.13.3
 seqeval
 tqdm
 tensorboard
 tensorboardx  # tensorboard --logdir=./output_dir/runs/ --host=0.0.0.0
 datasets
+accelerate==0.29.3
